# DFinder

./: .gitignore  README.md
.github/workflows/: rust.yml  rustcompilecheck.yaml  tauricompilecheck.yaml
src/: Test.html  index.css  index.html  index.js  recent.js  searchWorker.js  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_system.rs  gui_handler.rs  main.rs  search.rs  systeminfo.rs
src/Scripts/: Data.js  Elements.js  Main.js  Settings.js  Utils.js
src/Scripts/Lazy/: AddDropDown.js
src/Styles/: Filelist.css  Global.css  Homeui.css  Navbar.css  Opendialog.css  Settings.css  Toggleswitches.css
